# pax

./: README.md  pyproject.toml
docs/: api-contract.md  implementation-plan.md
docs/guide/: combinators.md  namespaces.md  quickstart.md  training.md  transforms.md
examples/: batchnorm.py  mlp.py  transformer.py
src/pax/: __init__.py  _types.py  combinators.py  module.py  namespaces.py  paths.py  random.py
src/pax/layers/: __init__.py  attention.py  dropout.py  embedding.py  linear.py  norm.py
tests/: test_combinators.py  test_core.py  test_integration.py  test_layers.py  test_namespaces.py  test_paths.py  test_random.py  test_rng.py  test_transforms.py
