[project]
name = "pax"
version = "0.1.0"
description = "A minimal neural network library for JAX. PyTorch's surface, JAX's soul."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.4.35",
]

[dependency-groups]
dev = [
    "optax>=0.2.4",
    "pytest>=8.3.0",
    "ty>=0.0.1a1",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pax"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
